--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,5 @@ platform = espressif32
 board = upesy_wroom
 framework = arduino
 lib_deps = 
-    lib
+	lib
+	adafruit/SdFat - Adafruit Fork@^2.2.3
