--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,6 @@ framework = arduino
 lib_deps = 
 	lib
 	adafruit/SdFat - Adafruit Fork@^2.2.3
+	zinggjm/GxEPD2@^1.5.8
+	olikraus/U8g2@^2.35.20
+	olikraus/U8g2_for_Adafruit_GFX@^1.8.0
